<resources>
    <string name="app_name">Words</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="input_new_word_here">input new word here</string>
    <string name="translation_are">translation are...</string>
    <string name="add_new_word">add new word</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="quiz">Quiz</string>
    <string name="statistics">Statistics</string>
    <string name="search">search...</string>
    <string name="manage_your_categories">manage your categories</string>
    <string name="categories">Categories</string>
    <string name="add_new_category">add new category</string>
    <string name="category_title">category title</string>

    <string name="isTargetsSelect">isTargetsSelectedSharedPreferences</string>
    <string name="isNativeSelect">isNativeSelectedSharedPreferences</string>
    <string name="currentLanguage">currentLanguageSharedPreferences</string>

    <string name="confirm">confirm</string>
    <string name="languages">Languages</string>
    <string name="hint_native_lang">select your native language</string>
    <string name="hint_target_langs">languages are you learning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challange_yourself">challange yourself</string>
    <string name="start">start</string>
    <string name="all_for_your_convenience">all for your convenience</string>
    <string name="notifications">Notifications</string>
    <string name="manage_categories">Manage categories</string>
    <string name="language">Language</string>
    <string name="donate">Donate</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>