<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintImageHolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/photoIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="1dp"
                        android:innerRadius="0dp"
                        android:shape="ring"
                        android:thicknessRatio="1.9"
                        app:cardCornerRadius="50dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/blueberry"
                            android:padding="5dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_settings" />

                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/constraintImageHolder"
                    app:layout_constraintStart_toStartOf="@+id/constraintImageHolder"
                    app:layout_constraintTop_toBottomOf="@+id/constraintImageHolder" />

                <TextView
                    android:id="@+id/userBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/all_for_your_convenience"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/userName"
                    app:layout_constraintStart_toStartOf="@+id/userName"
                    app:layout_constraintTop_toBottomOf="@+id/userName" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="vertical"
                android:verticalScrollbarPosition="left">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="7dp"
                    app:cardBackgroundColor="@color/blue_purple_light"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageView"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:src="@drawable/ic_notifications"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/blueberry" />

                        <TextView
                            android:id="@+id/textView37"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/notifications"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.compose.ui.platform.ComposeView
                            android:id="@+id/toggleNotifications"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="7dp"
                    app:cardBackgroundColor="@color/blue_purple_light"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/buttonCategories"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageView3"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:src="@drawable/ic_categories"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/blueberry" />

                        <TextView
                            android:id="@+id/textViewCategories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/manage_categories"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView3"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="7dp"
                    app:cardBackgroundColor="@color/blue_purple_light"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/buttonLanguages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageView4"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:src="@drawable/ic_language"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/blueberry" />

                        <TextView
                            android:id="@+id/textView40"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/language"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView4"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.483" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="7dp"
                    app:cardBackgroundColor="@color/blue_purple_light"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageView5"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:src="@drawable/ic_heart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/blueberry" />

                        <TextView
                            android:id="@+id/textView41"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/donate"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView5"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.483" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="7dp"
                    app:cardBackgroundColor="@color/blue_purple_light"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageView6"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:src="@drawable/ic_shield"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/blueberry" />

                        <TextView
                            android:id="@+id/textView42"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/privacy_policy"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView6"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.483" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>